--- a/basicDemo/basicDemo.vcxproj.filters
+++ b/basicDemo/basicDemo.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="components\userInterface.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="include\stb_image_write.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\basic.frag">
